prometheus-kubernetes/test_ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-monitoring
spec:
  rules:
  - host: prometheus.haid.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-svc
          servicePort: 9090
  - host: grafana.haid.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-monitoring-alertmanager
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.haid.com.cn
    http:
      paths:
      - path: /alertmanager
        backend:
          serviceName: alertmanager
          servicePort: 9093
